Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2593,8 +2593,8 @@ input, select, textarea {
 
 		.work-item .image img {
 			width: 100%;
-			height: 100%;
-			object-fit: fill; /* Stretch the image to fill the container */
+			height: auto;
+			object-fit: cover; /* Stretch the image to fill the container */
 			border-radius: 0.35em;
 		}
 
@@ -3038,6 +3038,15 @@ input, select, textarea {
 			body, input, select, textarea {
 				font-size: 12pt;
 			}
+
+		.work-item .image {
+			max-width: 300px; /* Set a maximum width */
+		}
+
+		.work-item .image img {
+			width: 100%;
+			height: auto;
+		}
 
 		/* Keep connect-me section in the footer */
 			.header-connect {
